--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="./dist/react-bootstrap-table-all.min.css">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2b5797">
     <title>
     Client Portal | Rey Diaz Law
@@ -37,6 +38,6 @@
 <script
   src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
   crossorigin></script>
-
 <script>var Alert = ReactBootstrap.Alert;</script>
+
 </html>
