removal of admin admin panel

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Accident, Injury, Attorney">
     <meta
       name="description"
-      content="Customer relation managment system for the law office of Rey Diaz"
+      content="Customer relation management system for the law office of Rey Diaz"
     />
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
